# ingot

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.agent/: dispatch-usecase-orchestration.md  electron-desktop-app.md  electron-hardening-review-fixes.md  http-boundary-remediation.md  runtime-store-collapse.md  source-preserving-error-mapping.md  task-4-6-refactors.md  usecases-entrypoint-consolidation-execplan.md
apps/ingot-daemon/: Cargo.toml
apps/ingot-daemon/src/: main.rs
crates/ingot-agent-adapters/: Cargo.toml
crates/ingot-agent-adapters/src/: claude_code.rs  codex.rs  lib.rs  segments.rs  subprocess.rs
crates/ingot-agent-protocol/src/: report.rs
crates/ingot-agent-runtime/: Cargo.toml
crates/ingot-agent-runtime/src/: autopilot.rs  completion.rs  convergence.rs  dispatch.rs  execution.rs  harness.rs  job_support.rs  lib.rs  reconciliation.rs  runtime_ports.rs  startup.rs  supervisor.rs  tests.rs
crates/ingot-agent-runtime/tests/: auto_dispatch.rs  convergence.rs  dispatch.rs  reconciliation.rs
crates/ingot-app/: Cargo.toml
crates/ingot-app/src/: convergence.rs  errors.rs  infra.rs  lib.rs
crates/ingot-config/src/: lib.rs  loader.rs  schema.rs
crates/ingot-config/tests/: config.rs
crates/ingot-domain/src/: activity.rs  agent.rs  agent_model.rs  branch_name.rs  convergence.rs  finding.rs  git_operation.rs  git_ref.rs  harness.rs  item.rs  job.rs  lease_owner_id.rs  project.rs  (+3 more)
crates/ingot-git/: Cargo.toml
crates/ingot-git/src/: commands.rs  commit.rs  project_repo.rs
crates/ingot-http-api/: Cargo.toml
crates/ingot-store-sqlite/: Cargo.toml
crates/ingot-test-support/: Cargo.toml
crates/ingot-workflow/: Cargo.toml
crates/ingot-workflow/src/: evaluator.rs  lib.rs  presentation.rs
crates/ingot-workflow/src/evaluator/: investigation.rs  projection.rs  tests.rs
crates/ingot-workspace/: Cargo.toml
ui/: package.json  vite.config.ts
ui/electron/: daemon-url.cjs  daemon-url.test.cjs  desktop-security.cjs  desktop-security.test.cjs  dev.cjs  main.cjs  preload.cjs
(+126 files in other folders)
