[package]
name = "ingot-git"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ingot-domain = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
ingot-test-support = { workspace = true }
