[package]
name = "ingot-workflow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ingot-domain = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
ingot-test-support = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
